--- a/VNStockSimulator.html
+++ b/VNStockSimulator.html
@@ -11,7 +11,7 @@
     </div>
 </div>
 
-<iframe src="https://iboard.ssi.com.vn/bang-gia/vn30" class="box liveboard"></iframe>
+<iframe src="https://banggia.vndirect.com.vn/chung-khoan/danh-muc" class="box liveboard"></iframe>
 
 <style>
     * {
