--- a/VNStockSimulator.html
+++ b/VNStockSimulator.html
@@ -1,153 +1,207 @@
-<div class="box left_bar">
-    <h1 style="margin-block-start: 0; margin-block-end: 0; text-align: center;">P:Vistsim</h1>
-    <div class="box money_bar">0</div>
-    <div id="stocks"></div>
-    <div class="box action_box">
-        <div class="header">BUY/SELL</div>
-        <input id="action_stock_name" placeholder="ID" />
-        <input id="action_stock_amount" type="number" placeholder="Amount" />
-        <input id="action_stock_price" type="number" placeholder="Price" />
-        <button onclick="do_action();">Try it!</button>
+<!-- saved from url=(0059)https://phonglan123.github.io/archive/VNStockSimulator.html -->
+<html>
+
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+</head>
+
+<body>
+    <div class="box left_bar">
+        <h1 style="margin-block-start: 0; margin-block-end: 0; text-align: center;">Vistsim 2.0</h1>
+        <div class="box money_bar">68,460,000</div>
+        <div id="stocks">
+            <div class="box stock_bar"><b>VIC</b><span style="float: right;">100</span></div>
+            <div class="box stock_bar"><b>VHM</b><span style="float: right;">100</span></div>
+            <div class="box stock_bar"><b>BID</b><span style="float: right;">100</span></div>
+            <div class="box stock_bar"><b>VNM</b><span style="float: right;">100</span></div>
+        </div>
+        <div class="box action_box">
+            <div class="header">BUY/SELL</div>
+            <input id="action_stock_name" placeholder="ID">
+            <input id="action_stock_amount" type="number" placeholder="Amount">
+            <input id="action_stock_price" type="number" placeholder="Price">
+            <button onclick="do_action();">Try it!</button>
+        </div>
+        <div class="box action_box">
+            <div class="header">LOGS</div>
+            <div id="logs"></div>
+        </div>
+        <div class="box action_box">
+            <div class="header">CALC PAL</div>
+            <input id="pal_stock_name" placeholder="ID">
+            <input id="pal_stock_amount" type="number" placeholder="Amount">
+            <input id="pal_stock_price" type="number" placeholder="Price">
+            <button onclick="do_pal();">Get PAL!</button>
+            <div id="pal_result" style="text-align: center; margin-top: 5px;">Your result here...</div>
+        </div>
     </div>
-</div>
 
-<iframe src="https://banggia.vndirect.com.vn/chung-khoan/danh-muc" class="box liveboard"></iframe>
+    <iframe src="./VNStockSimulator_files/danh-muc.html" class="box liveboard"></iframe>
 
-<style>
-    * {
-        box-sizing: border-box;
-    }
+    <style>
+        * {
+            box-sizing: border-box;
+        }
 
-    body {
-        background-color: #030303;
-        color: white;
-        font-family: Arial, Helvetica, sans-serif;
-        cursor: default;
-        overflow: hidden;
-    }
+        body {
+            background-color: #030303;
+            color: white;
+            font-family: Arial, Helvetica, sans-serif;
+            cursor: default;
+            overflow: hidden;
+        }
 
-    .box {
-        border: 1px solid #555;
-        border-radius: 5px;
-        display: inline-block;
-    }
+        .box {
+            border: 1px solid #555;
+            border-radius: 5px;
+            display: inline-block;
+        }
 
-    .box:hover,
-    .action_box input:hover,
-    .action_box button:hover {
-        border-color: white;
-    }
+        .box:hover,
+        .action_box input:hover,
+        .action_box button:hover {
+            border-color: white;
+        }
 
-    .left_bar {
-        background-color: #333333;
-        padding: 10px;
-        width: 165px;
-        height: 100%;
-        overflow: auto;
-        margin-top: 0;
-    }
+        .left_bar {
+            background-color: #333333;
+            padding: 10px;
+            width: 220px;
+            height: 100%;
+            overflow: auto;
+            margin-top: 0;
+        }
 
-    .liveboard {
-        width: calc(100% - 165px - 10px);
-        margin-left: 5px;
-        height: 100%;
-    }
+        .liveboard {
+            width: calc(100% - 220px - 10px);
+            margin-left: 5px;
+            height: 100%;
+        }
 
-    .stock_bar {
-        width: 100%;
-        padding: 10px;
-        margin: 5px 0;
-    }
+        .stock_bar {
+            width: 100%;
+            padding: 10px;
+            margin: 5px 0;
+        }
 
-    .money_bar {
-        width: 100%;
-        border-color: #d6db12;
-        color: #d6db12;
-        padding: 10px;
-        margin: 15px 0 15px 0;
-        font-weight: bold;
-        text-align: center;
-    }
+        .money_bar {
+            width: 100%;
+            border-color: #d6db12;
+            color: #d6db12;
+            padding: 10px;
+            margin: 15px 0 15px 0;
+            font-weight: bold;
+            text-align: center;
+        }
 
-    .action_box {
-        width: 100%;
-        padding: 10px;
-        margin: 25px 0 5px 0;
-    }
+        .action_box {
+            width: 100%;
+            padding: 10px;
+            margin: 25px 0 5px 0;
+        }
 
-    .action_box .header {
-        font-weight: bold;
-        background-color: #333333;
-        margin: 0 auto;
-        width: fit-content;
-        margin-top: -20px;
-        padding: 0 10px;
-    }
+        .action_box .header {
+            font-weight: bold;
+            background-color: #333333;
+            margin: 0 auto;
+            width: fit-content;
+            margin-top: -20px;
+            padding: 0 10px;
+        }
 
-    .action_box input,
-    .action_box button {
-        width: 100%;
-        margin: 5px 0;
-        padding: 10px;
-        font-size: 16px;
-        border: 1px solid #555;
-        border-radius: 5px;
-        outline: none;
-        background-color: #333333;
-        color: white;
-        cursor: pointer;
-    }
+        .action_box input,
+        .action_box button {
+            width: 100%;
+            margin: 5px 0;
+            padding: 10px;
+            font-size: 16px;
+            border: 1px solid #555;
+            border-radius: 5px;
+            outline: none;
+            background-color: #333333;
+            color: white;
+            cursor: pointer;
+        }
 
-    .action_box button:active {
-        background-color: #414141;
-    }
-</style>
+        .action_box button:active {
+            background-color: #414141;
+        }
+    </style>
 
-<script>
-    let
-        user_data = {
-            current_money: 100000000,
-            stocks: {},
-            logs: []
-        };
+    <script>
+        let
+            user_data = {
+                current_money: 100000000,
+                stocks: {},
+                logs: []
+            },
+            pal = {}; /* profit and loss */
 
-    function save_user_data() {
-        localStorage.setItem("vistsim_userdata", JSON.stringify(user_data));
-    }
+        function save_user_data() {
+            localStorage.setItem("vistsim_userdata", JSON.stringify(user_data));
+        }
 
-    function load_user_data() {
-        let temp = JSON.parse(localStorage.getItem("vistsim_userdata"));
-        if (temp) user_data = temp;
-    }
+        function load_user_data() {
+            let temp = JSON.parse(localStorage.getItem("vistsim_userdata"));
+            if (temp) user_data = temp;
+        }
 
-    function do_action() {
-        let stock_name = document.querySelector("#action_stock_name").value,
-            stock_amount = parseInt(document.querySelector("#action_stock_amount").value),
-            stock_price = parseInt(parseFloat(document.querySelector("#action_stock_price").value) * 1000);
+        function do_action() {
+            let stock_name = document.querySelector("#action_stock_name").value,
+                stock_amount = parseInt(document.querySelector("#action_stock_amount").value),
+                stock_price = parseInt(parseFloat(document.querySelector("#action_stock_price").value) * 1000);
 
-        if (!user_data.stocks[stock_name]) user_data.stocks[stock_name] = 0;
+            if (!user_data.stocks[stock_name]) user_data.stocks[stock_name] = 0;
 
-        user_data.current_money = user_data.current_money - stock_price * stock_amount;
-        user_data.stocks[stock_name] += stock_amount;
-        user_data.logs.push([new Date().toDateString().replace(/ /g, ""), stock_name, stock_amount, stock_price]);
+            user_data.current_money = user_data.current_money - stock_price * stock_amount;
+            user_data.stocks[stock_name] += stock_amount;
+            user_data.logs.push([new Date().toDateString().replace(/ /g, ""), stock_name, stock_amount, stock_price]);
 
-        update_display();
-        save_user_data();
-    }
+            update_display();
+            save_user_data();
+        }
 
-    function update_display() {
-        const format_number = number => Number(number).toLocaleString();
-        document.querySelector(".money_bar").innerHTML = format_number(user_data.current_money);
-        document.querySelector("#stocks").innerHTML = "";
-        Object.entries(user_data.stocks).forEach(stock => {
-            document.querySelector("#stocks").innerHTML +=
-                `<div class="box stock_bar">`
-                + `<b>${stock[0]}</b>`
-                + `<span style="float: right;">${stock[1]}</span>`
-                + `</div>`;
-        });
-    }
+        function do_pal() {
+            let stock_name = document.querySelector("#pal_stock_name").value,
+                stock_amount = parseInt(document.querySelector("#pal_stock_amount").value),
+                stock_price = parseInt(parseFloat(document.querySelector("#pal_stock_price").value) * 1000),
+                result = document.querySelector("#pal_result"),
+                this_pal = 0;
 
-    load_user_data();
-    setTimeout(() => update_display(), 1000);
-</script>
+            if (document.querySelector("#pal_stock_amount").value == "") stock_amount = user_data.stocks[stock_name];
+            this_pal = pal[stock_name] + (stock_amount * stock_price);
+
+            result.innerHTML = Number(this_pal).toLocaleString() + " VND";
+            result.style.color = this_pal >= 0 ? "green" : "red";
+        }
+
+        function update_display() {
+            const format_number = number => Number(number).toLocaleString();
+            document.querySelector(".money_bar").innerHTML = format_number(user_data.current_money);
+            document.querySelector("#stocks").innerHTML = "";
+            Object.entries(user_data.stocks).forEach(stock => {
+                if (stock[1] > 0)
+                    document.querySelector("#stocks").innerHTML +=
+                        `<div class="box stock_bar">`
+                        + `<b>${stock[0]}</b>`
+                        + `<span style="float: right;">${stock[1]}</span>`
+                        + `</div>`;
+            });
+            update_logs();
+        }
+
+        function update_logs() {
+            document.querySelector("#logs").innerHTML = "";
+            user_data.logs.reverse().forEach(log => {
+                document.querySelector("#logs").innerHTML += `<div class="box stock_bar" title="On ${log[0]} bought ${log[2]} ${log[1]} shares at the price of ${log[3]} VND"><b>${log[1]}</b><span style="float: right;"><font color="${log[2] >= 0 ? "green" : "red"}">${log[2]}</font> × <font color="blue">${log[3] / 1000}</font></span></div>`;
+                if (pal[log[1]] == undefined) pal[log[1]] = 0
+                pal[log[1]] -= (log[2] * log[3]);
+            });
+        }
+
+        load_user_data();
+        setTimeout(() => update_display(), 1000);
+    </script>
+</body>
+
+</html>
