--- a/VNStockSimulator.html
+++ b/VNStockSimulator.html
@@ -1,4 +1,3 @@
-<!-- saved from url=(0059)https://phonglan123.github.io/archive/VNStockSimulator.html -->
 <html>
 
 <head>
@@ -36,7 +35,7 @@
         </div>
     </div>
 
-    <iframe src="./VNStockSimulator_files/danh-muc.html" class="box liveboard"></iframe>
+    <iframe src="https://banggia.vndirect.com.vn/chung-khoan/danh-muc" class="box liveboard"></iframe>
 
     <style>
         * {
