--- a/VNStockSimulator.html
+++ b/VNStockSimulator.html
@@ -8,25 +8,20 @@
     <div class="box left_bar">
         <h1 style="margin-block-start: 0; margin-block-end: 0; text-align: center;">Vistsim 2.0</h1>
         <div class="box money_bar">68,460,000</div>
-        <div id="stocks">
-            <div class="box stock_bar"><b>VIC</b><span style="float: right;">100</span></div>
-            <div class="box stock_bar"><b>VHM</b><span style="float: right;">100</span></div>
-            <div class="box stock_bar"><b>BID</b><span style="float: right;">100</span></div>
-            <div class="box stock_bar"><b>VNM</b><span style="float: right;">100</span></div>
-        </div>
+        <div id="stocks"></div>
         <div class="box action_box">
             <div class="header">CALC PAL</div>
-            <input id="pal_stock_name" placeholder="ID">
-            <input id="pal_stock_amount" type="number" placeholder="Amount" value="0">
-            <input id="pal_stock_price" type="number" placeholder="Price" value="0">
-            <button onclick="do_pal();">Get PAL!</button>
+            <input id="pal_stock_name" placeholder="ID" onchange="do_pal()" oninput="do_pal()">
+            <input id="pal_stock_amount" type="number" placeholder="Amount" value="1" style="display: none">
+            <input id="pal_stock_price" type="number" placeholder="Price" value="0" style="display: none">
+            <button onclick="do_pal();" style="display: none">Get PAL!</button>
             <div id="pal_result" style="text-align: center; margin-top: 5px;">Your result here...</div>
         </div>
         <div class="box action_box">
             <div class="header">BUY/SELL</div>
             <input id="action_stock_name" placeholder="ID">
             <input id="action_stock_amount" type="number" placeholder="Amount" value="0">
-            <input id="action_stock_price" type="number" placeholder="Price" value="0">
+            <input id="action_stock_price" type="number" placeholder="Price" value="0" style="display: none">
             <button onclick="do_action();">Try it!</button>
         </div>
         <div class="box action_box">
@@ -35,7 +30,7 @@
         </div>
     </div>
 
-    <iframe src="https://banggia.vndirect.com.vn/chung-khoan/danh-muc" class="box liveboard"></iframe>
+    <!-- <iframe src="https://banggia.vndirect.com.vn/chung-khoan/danh-muc" class="box liveboard"></iframe> -->
 
     <style>
         * {
@@ -134,7 +129,8 @@
                 stocks: {},
                 logs: []
             },
-            pal = {}; /* profit and loss */
+            pal = {}, /* profit and loss */
+            stocks_price = {};
 
         function save_user_data() {
             localStorage.setItem("vistsim_userdata", JSON.stringify(user_data));
@@ -148,7 +144,7 @@
         function do_action() {
             let stock_name = document.querySelector("#action_stock_name").value,
                 stock_amount = parseInt(document.querySelector("#action_stock_amount").value),
-                stock_price = parseInt(parseFloat(document.querySelector("#action_stock_price").value) * 1000);
+                stock_price = stocks_price[stock_name] * 1000; // parseInt(parseFloat(document.querySelector("#action_stock_price").value) * 1000);
 
             if (!user_data.stocks[stock_name]) user_data.stocks[stock_name] = 0;
 
@@ -163,12 +159,12 @@
         function do_pal() {
             let stock_name = document.querySelector("#pal_stock_name").value,
                 stock_amount = user_data.stocks[stock_name],
-                stock_amount_ratio = parseInt(document.querySelector("#pal_stock_amount").value) / user_data.stocks[stock_name],
-                stock_price = parseInt(parseFloat(document.querySelector("#pal_stock_price").value) * 1000),
+                //stock_amount_ratio = parseInt(document.querySelector("#pal_stock_amount").value) / user_data.stocks[stock_name],
+                stock_price = stocks_price[stock_name], // parseInt(parseFloat(document.querySelector("#pal_stock_price").value) * 1000)
                 result = document.querySelector("#pal_result"),
                 this_pal = 0;
 
-            this_pal = (pal[stock_name] + (stock_amount * stock_price)) * stock_amount_ratio;
+            this_pal = (pal[stock_name] + (stock_amount * stock_price * 1000)) / user_data.stocks[stock_name];
 
             result.innerHTML = Number(this_pal).toLocaleString() + " VND";
             result.style.color = this_pal >= 0 ? "green" : "red";
@@ -181,8 +177,8 @@
             Object.entries(user_data.stocks).forEach(stock => {
                 if (stock[1] > 0)
                     document.querySelector("#stocks").innerHTML +=
-                        `<div class="box stock_bar">`
-                        + `<b>${stock[0]}</b>`
+                        `<div class="box stock_bar" id="${stock[0]}">`
+                        + `<b>${stock[0]} (<span>${stocks_price[stock[0]] ? stocks_price[stock[0]] : "0"}</span>)</b>`
                         + `<span style="float: right;">${stock[1]}</span>`
                         + `</div>`;
             });
@@ -198,8 +194,28 @@
             });
         }
 
+        function get_stock_price(code, callback) {
+            fetch("https://api.allorigins.win/get?url=https://www.bsc.com.vn/Companies/Overview/" + code + "?timestamp=" + new Date().getTime())
+                .then(res => res.json())
+                .then(json => {
+                    callback(json.contents.replace(/\r|\n| /g, "").split("<td>Gi&#225;hiệntại</td><tdclass=\"text-right\"><fontcolor='").pop().split("</font>")[0].split("(")[0].split(">")[1].replace(",", "."));
+                });
+        }
+
+        function update_stocks_price() {
+            Object.keys(user_data.stocks).forEach(stock => {
+                get_stock_price(stock, price => {
+                    stocks_price[stock] = Number(price);
+                    if (document.querySelector("#" + stock + " span"))
+                        document.querySelector("#" + stock + " span").innerHTML = Number(price);
+                });
+            });
+        }
+
         load_user_data();
         setTimeout(() => update_display(), 1000);
+        update_stocks_price();
+        setInterval(() => update_stocks_price(), 10000);
     </script>
 </body>
 
