--- a/VNStockSimulator.html
+++ b/VNStockSimulator.html
@@ -30,7 +30,7 @@
         </div>
     </div>
 
-    <!-- <iframe src="https://banggia.vndirect.com.vn/chung-khoan/danh-muc" class="box liveboard"></iframe> -->
+    <iframe src="https://banggia.vndirect.com.vn/chung-khoan/danh-muc" class="box liveboard"></iframe>
 
     <style>
         * {
