--- a/VNStockSimulator.html
+++ b/VNStockSimulator.html
@@ -6,7 +6,7 @@
 
 <body>
     <div class="box left_bar">
-        <h1 style="margin-block-start: 0; margin-block-end: 0; text-align: center;">Vistsim 2.0</h1>
+        <h1 style="margin-block-start: 0; margin-block-end: 0; text-align: center;">Vistsim v.3</h1>
         <div class="box money_bar">68,460,000</div>
         <div id="stocks"></div>
         <div class="box action_box">
