--- a/dailynews.html
+++ b/dailynews.html
@@ -233,7 +233,7 @@
         api_key = "AIzaSyCUyUlEcT2eul0-_5k6X15WN_d3Mgu_jrM",
         client_id = "509723180239-df84foq7m5lc2g158sqdqnb9ummdphhl.apps.googleusercontent.com",
         client_secret = "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",
-        redirect_uri = "http://phonglan123.github.io/archive/dailynews.html",
+        redirect_uri = "https://phonglan123.github.io/archive/dailynews.html",
         ytb_enabled = true;
 
     function send_gg_auth(code, callback) {
